# tesco_ds

./: .gitignore  README.md  pyproject.toml  requirements.txt
assignment/: tesco_DS_assignment.ipynb
data/masked_dataset/: train.csv
models/masked_dataset/: masked_model_GBR_PCA.pkl
models/tesco_dataset/: tesco_pkl  tesco_sales_model.pkl
notebooks/: my_solution.ipynb
reports/profile/: q1_test.csv.html  q4_data.csv.html
tesco/: constants.py  masked_model.py  sales_model.py  utils.py
tesco/data/: data_types.py  preprocessing.py  tmp_code.py
tesco/exploration/: inspection.py
