[tool.poetry]
name = "tesco"
version = "0.1.0"
description = ""
authors = ["Rafael Dias <rafaelagd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^4.1.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
taskipy = "^1.12.2"
isort = "^5.13.2"
mypy = "^1.8.0"
black = "^24.1.1"
prospector = {extras = ["all"], version = "^1.10.3"}
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
